--- a/4/style.css
+++ b/4/style.css
@@ -16,6 +16,7 @@ header, main, footer{max-width: 600px; text-align: left;}
 img{width: 140px;}
 h1{font-size: 35px; font-weight: 400; margin-bottom: -8px; line-height: 34px;}
 h2{margin-bottom: 10px; font-size: 22.5px; font-weight: 400;}
+p{line-height: 23px;}
 
 a{
 	color: inherit;
