--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ p.quote{
 /*HEADER*/
 
 header{
-	z-index: 1;
+	z-index: 2;
 	width: 100%;
 	overflow: hidden;
     position: fixed;
@@ -99,8 +99,8 @@ main section{
 	padding: 80px 20px;
 }
 
-main section.intro{
-	padding-top: 120px;
+main section.first{
+	padding-top: 180px;
 }
 
 main section.rosso{
@@ -185,4 +185,40 @@ main a:hover{
 	main img{
 		margin-top: 0px;
 	}
+}
+
+/*LOADER*/
+
+html, body, .slider, .slides, .slider img{
+	width: 100%;
+	height: 100%;
+}
+
+.intro{
+	text-align: center;
+	width: 100%;
+	height: calc(100% - 53px);
+}
+
+.hov{
+	z-index: 1;
+	position: absolute;
+	bottom: 73px;
+	right: 20px;
+	height: 30%;
+}
+
+.slider{overflow: hidden; position: relative;}
+.slides{display: flex; animation: slide 24s infinite;}
+.slide{flex: 0 0 100%;}
+.slider img{object-fit: cover;}
+
+@keyframes slide {
+	0% { transform: translateX(0);}
+	25% { transform: translateX(0);}
+	33.33% { transform: translateX(-100%);}
+	58.33% { transform: translateX(-100%);}
+	66.66% { transform: translateX(-200%);}
+	91.66% { transform: translateX(-200%);}
+	100% { transform: translateX(0);}
 }
