--- a/style.css
+++ b/style.css
@@ -16,40 +16,29 @@ p.quote{
 	line-height: 20px;
 }
 
-#marged{
-	margin: 5px 20px;
-}
-
 /*HEADER*/
 
 header{
 	z-index: 2;
 	width: 100%;
 	overflow: hidden;
-    position: fixed;
-    top: 0;
-	background-color: #E52213; /*rouge*/
+  position: fixed;
+  top: 0;
+	background-color: #1B1B1A; /*noir*/
 	color: #f2f2f2; /*gris*/
 }
 
-header .hh{
-	height: 53px;
-}
-
-header #myLinks{
-	display: none;
-}
-
-header #myLinks a{
-	margin: 20px 0px;
-}
+header img.logo{height: 50px; padding: 15px 20px;}
+header img.burger{height: 32px; margin-top: -2px;}
+header #myLinks{display: none;}
+header #myLinks a{padding: 25px 20px; text-align: right;}
+header a.home{width: 220px;}
 
 header a{
 	font-size: 40px;
 	font-weight: 200;
 	color: inherit;
 	text-decoration: none;
-	padding: 14px 16px;
 	display: block;
 }
 
@@ -57,20 +46,17 @@ header a.icon{
 	display: block;
 	position: absolute;
 	font-size: 60px;
-	top: -3px;
+	right: 20px;
+	top: 24px;
 }
 
-header a:hover{
-	transition: 0.2s;
-    filter: blur(3px);
-    -webkit-filter: blur(3px);
-}
+header a:hover{transition: 0.2s; filter: blur(3px); -webkit-filter: blur(3px);}
 
 /*FOOTER*/
 
 footer{
 	text-align: center;
-	padding: 5px 20px;
+	padding: 50px 20px 5px 20px;
 	background-color: #1B1B1A; /*noir*/
 	color: #f2f2f2; /*gris*/
 }
@@ -90,41 +76,24 @@ footer a:hover{
 
 /*MAIN*/
 
-main{
-	background-color: #1B1B1A; /*noir*/
-	color: #f2f2f2; /*gris*/
-}
+main{background-color: #1B1B1A; /*noir*/ color: #f2f2f2; /*gris*/}
 
-main section{
-	padding: 80px 20px;
-}
-
-main section.first{
-	padding-top: 180px;
-}
-
-main section.rosso{
-	background-color: #E52213; /*rouge*/
-}
-
-main section.rosso h2{
-	color: #1B1B1A; /*noir*/
-}
+main section.first{padding-top: 180px;}
+main section.rosso{background-color: #E52213; /*rouge*/}
+main section.rosso h2{color: #1B1B1A; /*noir*/}
+main section.grigio{background-color: #f2f2f2; /*gris*/ color: #1B1B1A; /*noir*/}
+main section{width: 100%; min-height: calc(100vh - 80px);}
 
 main img{
 	width: 100%;
+	height: calc(100vh - 80px);
 	display: block;
 	margin-top: 30px;
+	object-fit: cover;
 }
 
-.fil-gra{
-	filter: grayscale(100%);
-}
-
-.fil-gra:hover{
-	filter: grayscale(0%);
-	transition: 0.4s;
-}
+.fil-gra{filter: grayscale(100%); margin: 0;}
+.fil-gra:hover{filter: grayscale(0%); transition: 0.4s;}
 
 main h1{
 	margin-top: 0px;
@@ -146,7 +115,11 @@ main h2 span{
 	font-weight: 100;
 }
 
-div.jus-rig{
+div.txt{
+	padding: 40px 20px;
+}
+
+div#ali-rig{
 	text-align: right;
 }
 
@@ -154,18 +127,19 @@ main a img{
 	display: inline-block;
 	margin: 0px 10px;
 	width: 30px;
+	height: 30px;
 }
 
 main a{
 	font-size: 30px;
-	font-weight: 100;
-	color: #E52213; /*rouge*/
+	font-weight: 200;
+	color: #E52213;
 	text-decoration: none;
 }
 
 main a span{
 	font-size: 45px;
-	font-weight: 600;
+	font-weight: 100;
 }
 
 main a:hover{
@@ -174,40 +148,11 @@ main a:hover{
     -webkit-filter: blur(3.5px);
 }
 
-/*RESPONSIVE*/
+/*INTRO-SLIDER*/
 
-@media only screen and (min-width: 800px) {
-	main section{
-		display: grid;
-		grid-template-columns: repeat(2, 1fr);
-		grid-gap: 30px;
-	}
-	main img{
-		margin-top: 0px;
-	}
-}
+html, body, .slider, .slides, .slider img{width: 100%; height: 100%;}
 
-/*LOADER*/
-
-html, body, .slider, .slides, .slider img{
-	width: 100%;
-	height: 100%;
-}
-
-.intro{
-	text-align: center;
-	width: 100%;
-	height: calc(100% - 53px);
-}
-
-.hov{
-	z-index: 1;
-	position: absolute;
-	bottom: 73px;
-	right: 20px;
-	height: 30%;
-}
-
+.intro{text-align: center; width: 100%; height: calc(100%);}
 .slider{overflow: hidden; position: relative;}
 .slides{display: flex; animation: slide 24s infinite;}
 .slide{flex: 0 0 100%;}
@@ -221,4 +166,82 @@ html, body, .slider, .slides, .slider img{
 	66.66% { transform: translateX(-200%);}
 	91.66% { transform: translateX(-200%);}
 	100% { transform: translateX(0);}
+}
+
+/*NEWS-SLIDER*/
+
+section.mono{
+}
+
+button{
+	font-family: 'Archivo', sans-serif;;
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 15px;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+	font-size: 60px;
+}
+
+button:hover{
+	transition: 0.2s;
+    filter: blur(3.5px);
+    -webkit-filter: blur(3.5px);
+}
+
+button.nav-left{
+	margin-top: calc(-50vh + 40px);
+	float: left;
+}
+
+button.nav-right{
+	margin-top: calc(-50vh + 40px);
+	float: right;
+}
+
+.mySlides{
+	text-align: center;
+	margin: 0px 65px;
+	width: calc(100% - 130px);
+	transition: fade-out 5s;
+}
+
+#illustration{
+	padding-top: 40px;
+	max-width: 100%;
+	max-height: calc(100vh - 250px);
+	object-fit: contain;
+}
+
+/*GOOGLE MAPS EMBED*/
+
+#map {
+	position: relative;
+	width: 100%;
+	height: calc(100vh - 80px);
+}
+
+#map iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100% !important;
+}
+
+/*RESPONSIVE*/
+
+@media only screen and (min-width: 1000px) {
+	main section{
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+	}
+	main section.mono{
+		display: block;
+	}
+	main img{
+		margin-top: 0px;
+	}
 }
