--- a/style.css
+++ b/style.css
@@ -88,12 +88,12 @@ main img{
 	width: 100%;
 	height: calc(100vh - 80px);
 	display: block;
-	margin-top: 30px;
+	margin-top: 0px;
 	object-fit: cover;
 }
 
-.fil-gra{filter: grayscale(100%); margin: 0;}
-.fil-gra:hover{filter: grayscale(0%); transition: 0.4s;}
+.fil-gra{filter: grayscale(100%); margin: 0; transition: 1s ease;}
+.fil-gra:hover{filter: grayscale(0%);}
 
 main h1{
 	margin-top: 0px;
@@ -168,6 +168,45 @@ html, body, .slider, .slides, .slider img{width: 100%; height: 100%;}
 	100% { transform: translateX(0);}
 }
 
+/*IMAGE HOVERING*/
+
+.container{
+  position: relative;
+  width: 100%;
+}
+
+.thumbnailed{
+	display: block;
+  width: 100%;
+  height: calc(100vh - 80px);
+  background-color: pink;
+}
+
+.overlay{
+	color: #f2f2f2; /*gris*/
+  padding: 10px 20px;
+  position: absolute;
+  bottom: 0;
+  width: calc(100% - 40px);
+  opacity: 0;
+  transition: 1.5s ease;
+  background-color: #E52213; /*rouge*/
+}
+
+.overlay p{
+	padding-top: 8px;
+}
+
+.overlay a{
+	color: #f2f2f2; /*gris*/
+  float: right;
+  margin-top: -40px;
+}
+
+.container:hover .overlay{
+  opacity: 1;
+}
+
 /*NEWS-SLIDER*/
 
 section.mono{
@@ -240,8 +279,5 @@ button.nav-right{
 	}
 	main section.mono{
 		display: block;
-	}
-	main img{
-		margin-top: 0px;
 	}
 }
