--- a/style.css
+++ b/style.css
@@ -281,3 +281,7 @@ button.nav-right{
 		display: block;
 	}
 }
+
+@media only screen and (max-width: 1000px) {
+	main section#rev{display: flex; flex-direction: column-reverse;}
+}
