--- a/styles.css
+++ b/styles.css
@@ -160,6 +160,18 @@ main a.classic-link {
   color: #1B1B1A; /* black */
 }
 
+main a.inline-link {
+  font-weight: 600;
+  white-space: nowrap;
+  line-height: 45px;
+  text-decoration: none;
+  padding: 5px 18px 5px 0px;
+  margin-right: 15px;
+  border-bottom: 2px solid #1B1B1A; /* black */
+  background-color: #f2f2f2; /* grey */
+  color: #1B1B1A; /* black */
+}
+
 main a.color-reversed-link {
   width: 118px;
   font-weight: 600;
@@ -181,7 +193,7 @@ main a span{
   font-weight: 400;
 }
 
-main a.classic-link:hover , main a.color-reversed-link:hover , main a.text-link:hover , main a.image-link:hover {
+main a:hover {
   transition: 0.5s;
   filter: blur(1.5px);
   -webkit-filter: blur(1.5px);
