--- a/styles.css
+++ b/styles.css
@@ -96,8 +96,14 @@ body {
 /* footer */
 
 footer{
-  text-align: center;
-  padding: 30px 10px 15px 10px;
+  position: relative;
+  bottom: 0;
+  text-align: right;
+  width: calc(100% - 60px);
+  padding: 5px 30px;
+  background-color: #1B1B1A; /* black */
+  color: #f2f2f2; /* grey */
+  font-size: 16px;
 }
 
 footer a{
@@ -280,7 +286,7 @@ main img {
 /* news slider */
 
 .mono{
-  background-color: #969695; /* mid */
+  background-color: #1B1B1A; /* black */
   height: calc(100vh - 120px);
 }
 
@@ -293,7 +299,7 @@ main img {
 button{
   font-family: 'Archivo', sans-serif;;
   background: none;
-  color: inherit;
+  color: #f2f2f2; /* grey */
   border: none;
   padding: 15px;
   font: inherit;
