--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 /* header */
 
 .header {
-  padding: 20px 30px; /* Add padding for spacing */
+  padding: 20px 30px; 
   position: fixed;
   top: 0;
   left: 0;
@@ -22,12 +22,14 @@ body {
 
 .header img {
   height: 30px;
-  vertical-align: middle; /* Align the image vertically */
+  vertical-align: middle; 
   float: left;  
 }
 
+/* burger menu */
+
 .burger {
-  float: left; /* Float the burger menu to the right */
+  float: left; 
   cursor: pointer;
   margin-right: 30px;
 }
@@ -109,7 +111,6 @@ body {
   font-weight: 200;
 }
 
-/* Styling for the dropdown menu */
 .dropdown-menu {
   margin-left: 118px ;
   height: 100vh;
@@ -143,9 +144,13 @@ footer{
 }
 
 .column {
-    flex: 0 1 calc(33.33% - 20px); /* Each column takes up 1/3 of the container minus gap */
+    flex: 0 1 calc(33.33% - 20px);
     margin-bottom: 20px;
     box-sizing: border-box;
+}
+
+.foot{
+  font-size: 14px;
 }
 
 /* main */
@@ -159,9 +164,13 @@ section {
   width: 100%;
 }
 
+/* divs */
+
 .text-elements {
   padding: 0px 30px 45px 30px;
 }
+
+/* headings */
 
 h1 {
   color: #e52213; /* rosso */
@@ -179,17 +188,17 @@ h2 {
   line-height: 55px;
 }
 
-.small-separator {
-  height: 10px;
+h2 span {
+  color: #e52213; /* rosso */
 }
 
-.big-separator {
-  height: 30px;
-}
+/* separators */
 
-.line-separator{
-  border-bottom: 1px solid grey;
-}
+.small-separator {height: 10px;}
+.big-separator {height: 30px;}
+.line-separator {border-bottom: 1px solid grey;}
+
+/* links */
 
 a {
   font-weight: 600;
@@ -231,12 +240,7 @@ a:hover {
   -webkit-filter: blur(1.5px);
 }
 
-.icon{
-  padding-right: 15px;
-  width: 30px;
-  height: 30px;
-  display: inline-block;
-}
+/* images */
 
 main img {
   width: 100%;
@@ -282,10 +286,6 @@ main img {
   color: #f2f2f2; /* grey */
   text-align: center;
   font-size: 20px;
-}
-
-.foot{
-  font-size: 14px;
 }
 
 .slide:hover .overlay {
@@ -344,7 +344,8 @@ main img {
   }
 }
 
-/* Media query for footer */
+/* responsive for footer */
+
 @media (max-width: 1200px) {
     .column {
         flex: 0 1 calc(50% - 20px); 
@@ -357,7 +358,7 @@ main img {
     }
 }
 
-/* LANGUE */
+/* language switch */
 
 .lang-switch{
   float: right;
@@ -376,7 +377,7 @@ main img {
   background-color: rgba(0,0,0,0);
 }
 
-/* Dark Mode */
+/* Dark Mode switch */
 
 .DarkModeButton{
   float: right;
