--- a/styles.css
+++ b/styles.css
@@ -112,12 +112,12 @@ body {
 }
 
 .dropdown-menu {
-  margin-left: 118px ;
+  margin-left: 187px ;
   height: 100vh;
   display: none;
   position: absolute;
   background-color: #f2f2f2; /* grey */
-  width: 450px;
+  width: 100%;
   padding: 0px 20px;
   z-index: 1;
 }
