--- a/styles.css
+++ b/styles.css
@@ -192,7 +192,7 @@ p{
 /* headings */
 
 h1 {
-  color: #e52213; /* rosso */
+  opacity: 0.33;
   margin: 0px 0px 20px 0px;
   font-size: 14px;
   font-weight: 600;
@@ -466,10 +466,6 @@ body.dark-mode header{
 body.dark-mode footer{
   background-color: #242424; /* black - caffe #2 */
   color: #f2f2f2; /* grey */
-}
-
-body.dark-mode h1 {
-  color: #c96eff; /* mauve */
 }
 
 body.dark-mode img.svg-img {
