--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ body {
   top: 0px;
   right: 0;
   text-align: right;
-  padding: 70px 5px 0px 0px;
+  padding: 95px 5px 0px 0px;
   overflow-x: hidden;
   transition: 0.2s;
 }
@@ -153,17 +153,21 @@ footer{
 
 main {
   margin: 0;
-  padding-top: 90px;
+  padding-top: 72px;
+}
+
+main.direct-content {
+  margin: 100px 0px;
 }
 
 section {
   width: 100%;
 }
 
-.mono-404{
+.mono{
   text-align: center;
   max-width: 800px;
-  margin: 100px auto;
+  margin: 0 auto;
 }
 
 /* divs */
@@ -200,6 +204,7 @@ h2 {
 
 .small-separator {height: 10px;}
 .big-separator {height: 30px;}
+.mega-separator {height: 120px;}
 .line-separator {border-bottom: 1px solid grey;}
 
 /* links */
@@ -208,6 +213,10 @@ a {
   font-weight: 600;
   text-decoration: none;
   color: inherit;
+}
+
+main p a{
+  border-bottom: 1px solid;
 }
 
 a.classic-link {
@@ -258,7 +267,7 @@ a:hover {
 
 main img {
   width: 100%;
-  height: calc(100vh - 90px);
+  height: calc(100vh - 74px);
   margin: 0px;
   object-fit: cover;
   display: block;
@@ -327,6 +336,62 @@ main img {
     80% { transform: translateY(-10px); }
 }
 
+/* form */
+
+input.fill , textarea {
+  width: 100%;
+  background-color: rgba(0,0,0,0);
+  color: inherit;
+  border: none;
+  border-bottom: 1px solid;
+  font-size: 20px;
+  font-family: Archivo;
+  font-weight: 200;
+  margin-bottom: 30px;
+  padding-bottom: 4px;
+}
+
+textarea {
+  min-height: 100px;
+  max-width: 100%;
+}
+
+input.send {
+  font-family: Archivo;
+  font-weight: 600;
+  font-size: 19px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 97px;
+  margin: 7px 7px 0px 0px;
+  display: block; 
+  padding: 5px 15px 5.5px 17px;
+  border-radius: 500px;
+  border: 1px solid #1B1B1A; /* black */
+  color: #1B1B1A; /* black */
+  background-color: rgba(0,0,0,0);
+  cursor: pointer;
+}
+
+::placeholder {
+  color: inherit;
+  opacity: 0.33;
+}
+
+input.send:hover {
+  opacity: 0.33;
+}
+
+textarea:focus, input:focus{
+    outline: none;
+}
+
+body.dark-mode input.send {
+  border: 1px solid #f2f2f2; /* grey */
+  color: #f2f2f2; /* grey */
+}
+
 /* responsive */
 
 @media only screen and (min-width: 1000px) {
@@ -357,7 +422,10 @@ main img {
     display: none;
   }
   .text-elements {
-    padding: 100px 30px;
+    padding: 50px 30px;
+  }
+  main.direct-content {
+    margin: 30px 0px 0px 0px;
   }
   #DMB1 , #LS1 {
     display: none;
@@ -475,12 +543,12 @@ body.dark-mode {
   color: #f2f2f2; /* grey */
 }
 
-body.dark-mode header{
+body.dark-mode header {
   background-color: #1B1B1A; /* black */
   color: #f2f2f2; /* grey */
 }
 
-body.dark-mode footer{
+body.dark-mode footer {
   background-color: #242424; /* black - caffe #2 */
   color: #f2f2f2; /* grey */
 }
