--- a/styles.css
+++ b/styles.css
@@ -554,7 +554,7 @@ body.dark-mode footer {
 }
 
 body.dark-mode h1 {
-  color: #d57fe1; /* mauve */
+  color: #dbbeff; /* mauve */
 }
 
 body.dark-mode img.svg-img {
