--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
   font-size: 19px;
   font-weight: 200;
   line-height: 25px;
-  background-color: #dfdfdf; /* mid grey */
+  background-color: #f2f2f2; /* grey */
   color: #1B1B1A; /* black */
 }
 
@@ -138,6 +138,7 @@ body {
 /* footer */
 
 footer{
+  border-top: 1px solid lightgrey;
   position: relative;
   bottom: 0;
   width: calc(100% - 60px);
@@ -214,7 +215,7 @@ h3 {
 /* links */
 
 a {
-  font-weight: 600;
+  font-weight: 500;
   text-decoration: none;
   color: inherit;
 }
@@ -229,7 +230,7 @@ a.classic-link {
   display: inline-block; 
   padding: 5px 15px 5.5px 17px;
   border-radius: 500px;
-  background-color: #f2f2f2; /* grey */
+  background-color: #dfdfdf; /* mid grey */
 }
 
 a.hermit-link {
@@ -398,6 +399,22 @@ textarea:focus, input:focus{
 body.dark-mode input.send {
   border: 1px solid #f2f2f2; /* grey */
   color: #f2f2f2; /* grey */
+}
+
+/* faces container */
+
+.container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Minimum width of 300px */
+  gap: 15px;
+  max-width: 100%;
+}
+
+.item {
+}
+
+.portrait{
+  height: 300px;
 }
 
 /* responsive */
@@ -569,7 +586,7 @@ body.dark-mode header {
 }
 
 body.dark-mode footer {
-  background-color: #50525e; /* purple caffe */
+  background-color: #1B1B1A; /* black */
   color: #f2f2f2; /* grey */
 }
 
