--- a/styles.css
+++ b/styles.css
@@ -419,28 +419,41 @@ footer .module {
   gap: 0px 100px;
 }
 
+.note{
+  font-size: 15px;
+}
+
 /* faces container */
 
 .container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Minimum width of 300px */
-  gap: 15px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Minimum width of 300px */
+  gap: 5px;
   max-width: 100%;
 }
 
 .portrait {
-  height: 300px;
+  height: auto;
+  aspect-ratio: 1 / 1;
+}
+
+.item p , .item p.note {
+  margin: 5px 0 0 0;
+}
+
+.item p.note {
+  margin: 0 0 15px 0;
 }
 
 #list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Minimum width of 300px */
+  grid-template-columns: repeat(auto-fit, minmax(175px, 1fr)); /* Minimum width of 300px */
   gap: 0px;
   max-width: 100%;
 }
 
 #list p {
-  border-bottom: 1px solid;
+  border-bottom: 1px solid grey;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
